# clean-code-python

./: .codeclimate.yaml  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: ruff.yaml  test.yaml
alembic/: env.py
alembic/versions/: 5f455809154f_initial_migration.py
orchestration/: postgres-compose.yml
src/clean_python/: main.py  settings.py
src/clean_python/adapters/: postgres_adapters.py  sqlite_adapters.py
src/clean_python/core/: entities.py  ports.py  use_cases.py
tests/: conftest.py
tests/clean_python/: .env.test  test_main.py
tests/clean_python/adapters/sqlite/: test_sqlite_adapter.py  test_sqlite_adapter_no_orm.py
